welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:2: error: not found: value T
  T= new Array[Int](num)
  ^golomb:4: error: not found: value T
  T(0)=0
  ^golomb:5: error: not found: value T
  T(1)=1
  ^golomb:6: error: not found: value T
  T(2)=2
  ^golomb:7: error: not found: value T
  for (i <- 2 to T.length) {
                 ^golomb:8: error: not found: value T
    for (j <- ind to ind+T(i)) {
                         ^golomb:9: error: not found: value T
      T(j)=i
      ^golomb:12: error: not found: value T
 	return T(num)
               ^